--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,14 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <a href="#" target="_blank" id="fork-corner" class="fork-corner fc-tr fc-theme-github"></a>
+
+        <script>
+            var fcController = document.getElementById("fork-corner");
+            var fcElement = document.createElement("div");
+                fcController.parentNode.insertBefore(fcElement, fcController.nextSibling);
+        </script>
         
     </body>
 </html>
