--- a/demo/index.html
+++ b/demo/index.html
@@ -11,19 +11,14 @@
         <meta name="description" content="A modern and global open source fork corner label for your project's landing page.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/fork-corner.min.css">
+        <script src="assets/js/fork-corner.min.js" defer></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <a href="#" target="_blank" id="fork-corner" class="fork-corner fc-tr fc-theme-github"></a>
-
-        <script>
-            var fcController = document.getElementById("fork-corner");
-            var fcElement = document.createElement("div");
-                fcController.parentNode.insertBefore(fcElement, fcController.nextSibling);
-        </script>
+        <a href="#" target="_blank" id="fork-corner" class="fork-corner fc-tl fc-theme-github"></a>
         
     </body>
 </html>
