--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <a href="#" target="_blank" id="fork-corner" class="fork-corner fc-tr fc-animate-default fc-theme-default"></a>
+        <a href="#" target="_blank" id="fork-corner" class="fork-corner fc-pos-tr fc-animate-default fc-theme-gitlab"></a>
         
     </body>
 </html>
