👌 IMPROVE: Update demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,14 +10,38 @@
         <title>Fork Corner</title>
         <meta name="description" content="A modern and global open source fork corner label for your project's landing page.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Fork Corner Stylesheet -->
         <link rel="stylesheet" href="assets/css/fork-corner.min.css">
-        <script src="assets/js/fork-corner.min.js" defer></script>
+
+        <style>
+            .contents {
+                padding: 10px 20px;
+            }
+
+            h1, p {
+                color: #303030;
+                font-family: Arial, Helvetica, sans-serif;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
+
+        <!-- Fork Corner -->
+        <a href="https://github.com/warengonzaga/fork-corner" target="_blank" id="fork-corner" class="fork-corner fc-pos-tr fc-animate-default fc-theme-default"></a>
+
+        <div class="contents">
+            <h1>Fork Corner Customization Page</h1>
+            <p>The demo and customization page is under development.</p>
+            <p>Documentation will be available here <strong>docs.warengonzaga.com/fork-corner</strong></p>
+        </div>
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <a href="#" target="_blank" id="fork-corner" class="fork-corner fc-pos-tr fc-animate-default fc-theme-default"></a>
-        
+
+        <!-- Fork Corner Scripts -->
+        <script src="assets/js/fork-corner.min.js" defer></script>
     </body>
 </html>
