--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
         <title>Fork Corner</title>
         <meta name="description" content="A modern and global open source fork corner label for your project's landing page.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" href="./assets/images/favicon.png" type="image/png">
         <!-- Fork Corner Stylesheet -->
         <link rel="stylesheet" href="assets/css/fork-corner.min.css">
 
