--- a/demo/index.html
+++ b/demo/index.html
@@ -34,7 +34,7 @@
         <div class="contents">
             <h1>Fork Corner Customization Page</h1>
             <p>The demo and customization page is under development.</p>
-            <p>Documentation will be available here <strong>docs.warengonzaga.com/fork-corner</strong></p>
+            <p>Documentation will be available here <a target="_blank" href="https://docs.warengonzaga.com/fork-corner/"><strong>docs.warengonzaga.com/fork-corner</strong></a></p>
         </div>
 
         <!--[if lt IE 7]>
