📦 NEW: update demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,10 +7,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fork Corner</title>
+        <title>Fork Corner | Waren Gonzaga</title>
         <meta name="description" content="A modern and global open source fork corner label for your project's landing page.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+        <link rel="manifest" href="assets/img/site.webmanifest">
         <!-- Fork Corner Stylesheet -->
         <link rel="stylesheet" href="assets/css/fork-corner.min.css">
 
@@ -24,17 +27,24 @@
                 font-family: Arial, Helvetica, sans-serif;
                 text-align: center;
             }
+
+            a {
+                color: #f34f29;
+                font-weight: 700;
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
 
         <!-- Fork Corner -->
-        <a href="https://github.com/warengonzaga/fork-corner" target="_blank" id="fork-corner" class="fork-corner fc-pos-tr fc-animate-default fc-theme-default"></a>
+        <a href="https://github.com/warengonzaga/fork-corner" target="_blank" id="fork-corner" class="fork-corner fc-pos-tr fc-animate fc-theme-git"></a>
 
         <div class="contents">
-            <h1>Fork Corner Customization Page</h1>
-            <p>The demo and customization page is under development.</p>
-            <p>Documentation will be available here <strong>docs.warengonzaga.com/fork-corner</strong></p>
+            <h1>Fork Corner - Customization</h1>
+            <p>Open Source by <a href="https://github.com/warengonzaga" target="_blank">Waren Gonzaga</a></p>
+            <p>The customization page currently under development.</p>
+            <p>Documentation will be available here <strong><a href="https://docs.warengonzaga.com/fork-corner" target="_blank">docs.warengonzaga.com/fork-corner</a></strong></p>
         </div>
 
         <!--[if lt IE 7]>
