Fix overlap on mobile view

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -18,6 +18,13 @@
         <link rel="stylesheet" href="assets/css/fork-corner.min.css">
 
         <style>
+            body {
+                margin: 0;
+                display: grid;
+                place-items: center;
+                height: 100vh;
+                text-align: center;
+            }
             .contents {
                 padding: 10px 20px;
             }
